figure out autocomplete issue (z-index) still need to clean up

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,6 +26,10 @@ $form-background: #eee;
 
 $smallButtonFadeTime: .07s;
 
+.pac-container {
+    z-index: 1051 !important;
+}
+
 html, body, #content, #map-canvas, #dropdown-map-canvas {
   height: 100%;
   width: 100%;
